<resources>
    <string name="app_name">Pizza Order</string>

    <string name="topping">Topping</string>
    <string name="tuna">Tuna</string>
    <string name="chicken">Chicken</string>
    <string name="cheese">Cheese</string>
    <string name="beef">Beef</string>
    <string name="bacon">Bacon</string>

    <string name="size">Size</string>
    <string name="large">Large</string>
    <string name="medium">Medium</string>
    <string name="small">Small</string>

    <string name="crust">Crust</string>
    <string name="thick">Thick</string>
    <string name="thin">Thin</string>

    <string name="drink">Drink</string>
    <string name="sevenup">7 UP</string>
    <string name="pepsi">Pepsi</string>
    <string name="fanta">Fanta</string>
    <string name="coca">7Coca Cola</string>

    <string name="orderDetail">Order detail</string>
    <string name="order">Order</string>
    <string name="location">Location</string>
    <string name="yourOrder">Your order</string>

    <string name="none">None</string>
    <string name="toppingWarning">You have to choose at least 1 topping</string>

</resources>